@@ -5,6 +5,7 @@ V1.9 October X, 2016
 	* Provides iMe V00.00.01.23 printer firmware
 	* Added options for solid layer fill patterns when using Slic3r
 	* Fixed some issues with the slicer profile editor
+	* Fixed OS X installer to work with OS X V10.12
 
 V1.8 September 22, 2016
 
